--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	},
 	"dependencies": {
 		"@netlify/functions": "^2.8.2",
+		"@sparticuz/chromium": "^131.0.1",
 		"chrome-aws-lambda": "^10.1.0",
 		"playwright-core": "^1.49.0"
 	}
