feat(pdf): add pdfResponse function for PDF downloads

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"scripts": {
 		"dev": "ntl dev",
 		"format": "nr biome check --write",
+		"pretty": "nr biome format --write",
 		"test": "bun test api --watch",
 		"test:puppet": "nlx playwright test --headed puppet.spec.ts"
 	},
