--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@
 
 [functions]
    node_bundler = "esbuild"
-   external_node_modules = ["@sparticuz/chromium"]
+   external_node_modules = ["@sparticuz/chromium", "playwright-core"]
 
 # this is actually a Rewrite
 # totally optional, but makes up for
